--- a/assets/theme-custom.css.liquid
+++ b/assets/theme-custom.css.liquid
@@ -39,7 +39,7 @@ input:focus, textarea:focus, select:focus {
 }
 .ht-products .ht-product .ht-product-inner .ht-product-content .ht-product-content-inner .ht-product-ratting-wrap .ht-product-ratting i,
 i.spr-icon.spr-icon-star-half-alt {
-  color: #e7a415;
+  color: #f76b6a;
   opacity: 1;
 }
 .ht-products .ht-product .ht-product-inner .ht-product-content .ht-product-content-inner .ht-product-price span.old span,
@@ -338,7 +338,7 @@ ul.archive-sidebar > li:before {
 }
 .product-details-content .pro-details-rating-wrap .pro-details-rating i, .spr-summary i.spr-icon.spr-icon-star, .spr-review-header i,
 #review .spr-icon.spr-icon-star.spr-icon-star-empty.spr-icon-star-hover, #review .spr-form-review-rating a, .spr-form-review-rating a:hover{
-  color: #e7a415;
+  color: #f76b6a;
 }
 .dynamic_btn.text-center {
   margin-left: auto;
