--- a/sections/about-service.liquid
+++ b/sections/about-service.liquid
@@ -120,7 +120,7 @@
 					"value": "style_two"
 				}
 			],
-			"default": "style_one"
+			"default": "style_two"
 		},
 		{
 			"type": "select",
@@ -144,7 +144,7 @@
 					"value": "3"
 				}
 			],
-			"default": "4"
+			"default": "3"
 		},
 		{
 			"type": "color",
