--- a/sections/service.liquid
+++ b/sections/service.liquid
@@ -129,7 +129,7 @@
 					"value": "style_two"
 				}
 			],
-			"default": "style_one"
+			"default": "style_two"
 		},
 		{
 			"type": "select",
@@ -153,7 +153,7 @@
 					"value": "3"
 				}
 			],
-			"default": "4"
+			"default": "3"
 		}
 
 	],
