--- a/sections/slider-boxed.liquid
+++ b/sections/slider-boxed.liquid
@@ -251,8 +251,8 @@
                           "value": "default"
                       }
                   ],
-                  "default": "default"
-              },
+                  "default": "box_width"
+              },      
 
         {
           "type": "color",
