--- a/sections/tab-with-product.liquid
+++ b/sections/tab-with-product.liquid
@@ -583,25 +583,25 @@
           "type": "color",
           "id": "tab_title_color",
           "label": "Tab Title Color",
-          "default": "#1f2226"
+          "default": "#1F2226"
         },
         {
           "type": "color",
           "id": "tab_title_bg_color",
           "label": "Tab BG Color",
-          "default": "#f1f1f1"
+          "default": "#FFFFFF"
         },
         {
           "type": "color",
           "id": "tab_title_active_color",
           "label": "Active Tab Title Color",
-          "default": "#fff"
+          "default": "#F76B6A"
         },
         {
           "type": "color",
           "id": "tab_title_active_bg_color",
           "label": "Active Tab BG Color",
-          "default": "#1f2226"
+          "default": "#FFFFFF"
         },
         {
           "type": "range",
