--- a/sections/slider-boxed.liquid
+++ b/sections/slider-boxed.liquid
@@ -535,7 +535,7 @@
                       {"label": "Center", "value": "center"},
                       {"label": "Right", "value": "right"}
                   ],
-                  "default": "left"
+                  "default": "center"
                 }, 
                 {
                   "type": "select",
