--- a/sections/service.liquid
+++ b/sections/service.liquid
@@ -200,7 +200,7 @@
                   "type": "color",
                   "id": "service_bg_color",
                   "label": "Service BG Color",
-                  "default": "#ffffff"
+                  "default": "#f6f7f8"
                 },
                 {
                     "type": "color",
